Fixing buttons overflowing their container on sidebar

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -9,7 +9,7 @@
   font-family: 'Forum', cursive;
   /* font-family: 'mod'; */
   margin-bottom: 0.4em;
-  font-size: 4rem !important;
+  font-size: 3.8rem !important;
 }
 
 @media screen and (max-width: 768px) {
